# SPHinXsim

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PROGRESS.md  README.md  example_dambreak_simple.py  index.html  mkdocs.yml  pyproject.toml  setup-local-env-oneapi.sh  setup-local-env.sh  test_bindings.py  test_simple.py
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/overrides/partials/: head.html
examples/: example_builder_api.py  example_dambreak_simple.py  example_nlp_to_simulation.py  test_builder_api.py  test_dambreak_2d.py  test_dambreak_simple.py  test_nlp_to_simulation.py  test_simulation_2d.py
examples/input/test_simulation_2d/: config.json
search/: search_index.json
sphinxsim/: __init__.py  __main__.py  cli.py
sphinxsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sphinxsim/bindings/: __init__.py  cpp_bridge.py  simulation_builder.py  sphinxsys_python.cpp
sphinxsim/config/: __init__.py  schemas.py
sphinxsim/llm/: __init__.py  config_to_simulation.py  copilot_llm.py  mock_llm.py  openai_llm.py
sphinxsim/sph_simulation/: base_simulation_builder.cpp  base_simulation_builder.h  base_simulation_builder.hpp  constraint_builder.h  constraint_builder.hpp  continuum_simulation_builder.cpp  continuum_simulation_builder.h  continuum_simulation_builder.hpp  fluid_simulation_builder.cpp  fluid_simulation_builder.h  fluid_simulation_builder.hpp  geometry_builder.cpp  geometry_builder.h  geometry_builder.hpp  io_builder.cpp  io_builder.h  io_builder.hpp  material_builder.cpp  material_builder.h  particle_generation.cpp  particle_generation.h  particle_generation.hpp  particle_relaxation.cpp  particle_relaxation.h  particle_relaxation.hpp  particle_relaxation_builder.cpp  particle_relaxation_builder.h  recording_builder.cpp  recording_builder.h  recording_builder.hpp  sph_simulation.cpp  sph_simulation.h  sph_simulation.hpp  sph_simulation_builder.cpp  sph_simulation_builder.h  sph_simulation_json.h  sph_simulation_utility.cpp  sph_simulation_utility.h
sphinxsim/sphinxsys/src/shared/sph_simulation/: sph_simulation.cpp  sph_simulation.h
tests/: __init__.py  conftest.py  test_bindings.py  test_cli.py  test_config_to_simulation.py  test_llm.py  test_llm_factory.py  test_schemas.py  test_simulation_builder.py
tests/examples/: full_updated_simulation_config.json
tests/output/: tank_0000000000.vtp  water_0000000000.vtp
tests/test_simulation/test_2d_simulation/: CMakeLists.txt  simulation.cpp
tests/test_simulation/test_2d_simulation/data/: config.json  dambreak.json  filling_tank.json  milling.json
tests/test_simulation/test_3d_simulation/: CMakeLists.txt  simulation.cpp
tests/test_simulation/test_3d_simulation/data/: config.json  dambreak.json  t_pipe.json
